Organised some static files like img vid gif

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grow Infinity</title>
-    <link rel="icon" type="image/png" href="/GrowInfinity.gif"/>
+    <link rel="icon" type="image/gif" href="Static/GrowInfinity.gif"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
     <link rel="stylesheet" href="index.css">
@@ -15,7 +15,7 @@
         <div class="container-fluid">
             <!-- <img src="demo.gif"> -->
             <video width="60vw" height="60vw"  autoplay loop id="logo">
-                <source src="GrowInfinity.mp4" type="video/mp4" ></video>
+                <source src="Static/GrowInfinity.mp4" type="video/mp4" ></video>
           <!-- <a class="navbar-brand" href="#">Navbar</a> -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -57,35 +57,35 @@
       <div class="row container-fluid Investors my-4">
           <h3 id="InvestorsHeading">Our Top Investors</h3>
           <div class="card mx-3 mycard" >
-            <img src="billGates.jpg" class="card-img-top myCardImg" alt="...">
+            <img src="Static/billGates.jpg" class="card-img-top myCardImg" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example .</p>
             </div>
           </div>
           <div class="card mx-3 mycard" >
-            <img src="warrenBuffett.jpg" class="card-img-top myCardImg" alt="...">
+            <img src="Static/warrenBuffett.jpg" class="card-img-top myCardImg" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text </p>
             </div>
           </div>
           <div class="card mx-3 mycard" >
-            <img src="Ratan_Tata_Indiatimes.webp" class="card-img-top myCardImg" alt="...">
+            <img src="Static/Ratan_Tata_Indiatimes.webp" class="card-img-top myCardImg" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example .</p>
             </div>
           </div>
           <div class="card mx-3 mycard" >
-            <img src="Elon_Musk_Royal_Society_(crop1).jpg" class="card-img-top myCardImg" alt="...">
+            <img src="Static/Elon_Musk_Royal_Society_(crop1).jpg" class="card-img-top myCardImg" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example .</p>
             </div>
           </div>
           <div class="card mx-3 mycard" >
-            <img src="jeff.jpg" class="card-img-top myCardImg" alt="...">
+            <img src="Static/gjeff.jpg" class="card-img-top myCardImg" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example .</p>
