Fixed a img bug

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
           </div>
           <div class="card mx-3 mycard" >
-            <img src="Static/gjeff.jpg" class="card-img-top myCardImg" alt="...">
+            <img src="Static/jeff.jpg" class="card-img-top myCardImg" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example .</p>
